--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Arvo|Dokdo|Great+Vibes|Kaushan+Script|Luckiest+Guy|Pacifico|Righteous|Satisfy" rel="stylesheet">
 <body>
   <div class="container">
     <div class="jumbotron">
