trying to make this thing work

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
       <br>
 
       <div class="text-center">
-        <a href="./survey.html"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span>Looking for love!</button></a>
+        <a href="/survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span>Looking for love!</button></a>
       </div>
     </div> 
   </div>     
@@ -30,7 +30,7 @@
   <div class="container">
       <footer class="footer">
         <div class="container">
-          <p><a href="./api.friends">API Friends List</a> | <a href="https://jenyz321.github.io/friendFinder/">Git Hub Repo</a>
+          <p><a href="./api/friends">API Friends List</a> | <a href="https://jenyz321.github.io/friendFinder/">Git Hub Repo</a>
         </div>
       </footer>
   </div>
