--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -156,7 +156,7 @@
         <hr>
         <footer class="footer">
           <div class="container">
-            <p><a href="/api/friends">Looking for love</a> | <a href="https://jenyz321.github.io/friendFinder/">Git Hub Repo</a> | <a href="./home.html">Home</a></a></p>
+            <p><a href="/api/friends">Looking for love</a> | <a href="https://jenyz321.github.io/friendFinder/">Git Hub Repo</a> | <a href="/">Home</a></a></p>
           </div>
         </footer>
     
